<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#00FFE2"
        android:backgroundTintMode="multiply"

        android:text="@string/new_tax_regime"


        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/take_home_salary_calculator"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="399dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="#2E2E2E"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:hint="@string/companany_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="398dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="520dp"
        android:autofillHints=""
        android:backgroundTint="#00FFE2"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/designation"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="448dp"
        android:autofillHints=""
        android:backgroundTint="#00E3CF"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/annual_ctc"
        android:inputType="numberDecimal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="398dp"
        android:layout_height="55dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:autofillHints=""

        android:backgroundTint="#00F6FF"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/experience_in_years"
        android:inputType="textPersonName"
        android:textColorHint="#757575"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="420dp"
        android:backgroundTint="#00E2F6"
        android:backgroundTintMode="multiply"
        android:text="@string/old_tax_regime"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="286dp"
        android:text="@string/select_tax_regime"
        android:textColor="#000000"
        app:drawableRightCompat="@drawable/ic_baseline_info_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />


</androidx.constraintlayout.widget.ConstraintLayout>